...
}

#pragma mark - Configure View

- (void)configureView {
    self.tableView.tableFooterView = [[UIView alloc]initWithFrame:CGRectZero];
    self.title = @"New Task";
    self.clearReminderButton.hidden = YES;
    
    if (self.task != NULL) {
        self.title = @"Edit Task";
        self.taskTitleTextField.text = self.task.taskTitle;
        self.taskNoteTextField.text = self.task.taskNote;
...
