...
        UILabel *messageLabel = [[UILabel alloc]initWithFrame:CGRectMake(0, 0,
                                                                         self.view.bounds.size.width,
                                                                         self.view.bounds.size.height)];
        
        messageLabel.textAlignment = NSTextAlignmentCenter;
        messageLabel.numberOfLines = 0;
        messageLabel.text = @"No task. Please click 'Add' button";
        [messageLabel sizeToFit];
        
        self.tableView.backgroundView = messageLabel;
        self.tableView.separatorStyle = UITableViewCellSeparatorStyleNone;
        
        [self.tableView reloadData];
...
