...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="0Db-m5-PTP" id="A47-3M-tcK"/>
                            <outlet property="delegate" destination="0Db-m5-PTP" id="wFW-33-HOI"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="To-Do List" id="cNx-pi-u9U">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="acU-gQ-99p">
                            <connections>
                                <action selector="createTask:" destination="0Db-m5-PTP" id="Ejo-os-Nui"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
